# Indic-pipeline

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/indicpipeline/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/asr/: config.json  language_masks.json  vocab.json
app/src/main/assets/tts/asm/: tokens.txt
app/src/main/assets/tts/ben/: tokens.txt
app/src/main/assets/tts/guj/: tokens.txt
app/src/main/assets/tts/hin/: tokens.txt
app/src/main/assets/tts/kan/: tokens.txt
app/src/main/assets/tts/mal/: tokens.txt
app/src/main/assets/tts/mar/: tokens.txt
app/src/main/assets/tts/ory/: tokens.txt
app/src/main/assets/tts/pan/: tokens.txt
app/src/main/assets/tts/tam/: tokens.txt
app/src/main/assets/tts/tel/: tokens.txt
app/src/main/cpp/: CMakeLists.txt  fbank.cpp  fbank.h  fbank_jni.cpp  sentencepiece_jni.cpp
app/src/main/java/com/example/indicpipeline/: AsrEngine.java  AssetUtils.java  AudioRecorder.java  BatchEvaluator.java  DecodeUtils.java  FbankJNI.java  IndicToUroman.java  LangConfig.java  MainActivity.java  ModelAvailability.java  OfflineTranslator.java  PipeJoinDecode.java  ScriptConverter.java  SentencePieceTokenizer.java  TtsEngine.java  WavUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/indicpipeline/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
